--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,18 +1,29 @@
+/* @import 'https://fonts.googleapis.com/css?family=Roboto:300,400,500'; */
+@import url('https://fonts.googleapis.com/css2?family=Recursive&display=swap');
+
 * {
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
 }
-
-
-
+body {
+    margin: 0 auto;
+    font-family: "Recursive","Helvetica", "Arial", sans-serif;
+    line-height: 1.5;
+    padding: 4em 1em;
+    color: #555;
+}
 a {
     text-decoration: none;
     color: rgb(85, 101, 111);
 }
 a:hover,
 a:focus {
-    text-decoration: none;
+    background-color: none !important;
+    text-decoration: underline;
+    text-decoration-color: #ff6564;
+    text-decoration-line: underline;
+    
 }
 
 h3 {
@@ -209,28 +220,14 @@ h3 {
             /* this is a light blue */
         }
 
-        @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap');
+        /* @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap'); */
 
         :root {
             --background: #FFF;
             --text: #000;
             --highlight: #ff6564;
        }
-        /* body {
-            background: var(--background);
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
-            overflow: hidden;
-            transition: 0.5s background ease;
-       } */
-        /* .container {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            flex-direction: column;
-       } */
+        
         .color-switch {
             --background: #fff;
             --text: #000;
@@ -254,7 +251,7 @@ h3 {
             transition: 0.5s all ease;
        }
         .dark-theme {
-            --background: #000;
+            --background: #010221;
             --text: #FFF;
           --highlight: #ff6564;
             background: var(--background);
@@ -272,37 +269,5 @@ h3 {
             display: flex;
             justify-content: center;
        }
-        /* ul {
-            display: flex;
-            list-style-type: none;
-       }
-        ul a {
-            margin: 10px 30px;
-            position: relative;
-            color: var(--text);
-            font-family: 'Montserrat', sans-serif;
-            font-size: 20px;
-            text-transform: uppercase;
-            text-decoration: none;
-       }
-        ul a:before {
-            position: absolute;
-            bottom: -2px;
-            content: '';
-            width: 100%;
-            height: 3px;
-            background: var(--highlight);
-            transform: translateX(-100%);
-            opacity: 0;
-       }
-        ul a:hover:before {
-            opacity: 1;
-            transition: 0.5s transform ease, 0.8s opacity ease;
-            transform: translateX(0);
-       }
-        ul .active {
-            color: var(--highlight);
-       }
-        ul .active:hover:before {
-            opacity: 0;
-       } */
+        
+     
